example-gift-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-gift
  namespace: aws-ttt-3
spec:
  selector:
    app: example-gift
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 18080
